[edit] fixing alignment

--- a/client/src/components/Contact/contact.scss
+++ b/client/src/components/Contact/contact.scss
@@ -41,31 +41,38 @@
   flex-direction: column;
   font-size: 0.9em;
 
-  .contact-info {
-    display: inline;
+  .contact-phone {
+    display: flex;
     font-family: "Montserrat";
     font-weight: bold;
     line-height: 1.5em;
     text-align: center;
     border: 1px solid black;
     border-radius: 4px;
-
-    .icon {
-      text-align: center;
-    }
-
-    .phoneNumber {
-      text-align: center;
-    }
-
-    .email {
-      text-align: center;
-    }
-
-    .from {
-      text-align: center;
-    }
+    align-items: center;
   }
+
+    .contact-email {
+      display: flex;
+      font-family: "Montserrat";
+      font-weight: bold;
+      line-height: 1.5em;
+      text-align: center;
+      border: 1px solid black;
+      border-radius: 4px;
+      align-items: center;
+    }
+
+    .contact-info {
+      display: flex;
+      font-family: "Montserrat";
+      font-weight: bold;
+      line-height: 1.5em;
+      text-align: center;
+      border: 1px solid black;
+      border-radius: 4px;
+      align-items: center;
+    }
 }
 
 .footer {
@@ -140,11 +147,14 @@
   }
 
   .information {
-    padding: 1em;
+    padding-left: 1em;
+    padding-right: 1em;
 
-    .contact-info {
+    .contact-phone {
       margin-bottom: 1em;
-      padding-top: 0.2em;
+    }
+    .contact-email {
+      margin-bottom: 1em;
     }
   }
 }
@@ -159,14 +169,7 @@
   }
 
   .information {
-    display: grid;
-    grid-template-columns: auto auto auto;
-    padding-left: 1em;
-    padding-right: 1em;
-
     .contact-info {
-      padding-top: 0.3em;
-      padding-bottom: 0.3em;
     }
   }
 
@@ -178,16 +181,9 @@
 //desktop
 @media only screen and (min-width: 961px) {
   .information {
-    display: grid;
-    grid-template-columns: auto auto auto;
-    padding-bottom: 1em;
-    padding-top: 1em;
-    padding-left: 3em;
-    padding-right: 3em;
 
     .contact-info {
-      padding-top: 0.3em;
-      padding-bottom: 0.3em;
+
     }
   }
 
